Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10428

QNAM discards manual proxy server on Windows when 'Automatically detect settings' is checked (Win7 default)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.x, 5.0.0
    • 4.6.2, 4.7.0
    • Network: Proxies
    • None
    • 276f64d21d7b877044fddd646b855829950099b0 (5.0), 1524b8dc5a994d01b51a5fa80b3e634e891b7e79 (4.8)

      When detect option is checked (see screenshot), and a manual proxy is specified, and the detection fails, no connection can be established.

      Expected behavior: Fall back to manually specified proxy. This is also what IE does.

      Relevant code: qnetworkproxy_win.cpp:307

      ieProxyConfig.fAutoDetect is true, hence the fetched proxyServerList gets cleared.

        1. proxysettings_win.JPG
          37 kB
          Daniel Molkentin (Inactive Nokia Account!)
        2. test_case.zip
          0.7 kB
          Nokia Qt Support
        For Gerrit Dashboard: QTBUG-10428
        # Subject Branch Project Status CR V

            shkearns Shane Kearns
            dmolkent Daniel Molkentin (Inactive Nokia Account!) (Inactive)
            Votes:
            4 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes